--- a/Task Manager/Views/Task/CreateTask.cshtml
+++ b/Task Manager/Views/Task/CreateTask.cshtml
@@ -46,7 +46,7 @@
                                         </div>
                                         <div class="col-lg-6 ">
                                             <input type="hidden" id="cust_id" value="0" />
-                                            <input class="form-control" type="text" ng-model="task.task.task_name">
+                                            <input class="form-control" type="text" ng-model="task.task.task_name" required="required">
                                         </div>
                                     </div>
 
@@ -55,7 +55,7 @@
                                             <label>Customer Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl"></select>
+                                            <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl" required="required"></select>
 
                                         </div>
                                     </div>
@@ -64,7 +64,7 @@
                                             <label>Project Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="project.name for project in projects" ng-model="projectId" class="ddl"></select>
+                                            <select ng-options="project.name for project in projects" ng-model="projectId" class="ddl " required="required"></select>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 spacing">
@@ -72,7 +72,7 @@
                                             <label>Issue</label>
                                         </div>
                                         <div class="col-lg-6">
-                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description"> </textarea>
+                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description" required="required"> </textarea>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 spacing">
@@ -144,52 +144,41 @@
 <script type="text/javascript">
 
     var app = angular.module("task", ['multipleSelect']);
-
     app.controller("taskctrl", function ($scope, $http) {
-
-
-        $scope.message = $http.get('/api/TaskApi/'+0).then(function (response) {
+        $scope.message = $http.get('/api/TaskApi/' + 0).then(function (response) {
+            console.log(response.data);
             $scope.task = response.data;
-            $scope.pid = $scope.task.projectId;
-            $scope.cid = $scope.task.customerId;
-            console.log($scope.pid+","+$scope.cid);
+            $scope.pid = $scope.task.pid;
+            $scope.cid = $scope.task.cid;
+            console.log($scope.task.pid + "," + $scope.task.cid);
             $scope.selectedList = $scope.task.tags;
-            $scope.task.task.start_date = new Date($scope.task.task.start_date);
-            $scope.task.task.end_date = new Date($scope.task.task.end_date);
-
+            $scope.task.task.start_date = new Date($scope.task.start_date);
+            $scope.task.task.end_date = new Date($scope.task.end_date);
         });
 
-        $scope.message = $http.get('/api/angularApi/'+0).then(function (response) {
+        $scope.message = $http.get('/api/angularApi/' + 0).then(function (response) {
             $scope.customers = response.data;
             console.log($scope.customers);
             for (var i = 0; i < $scope.customers.length; i++) {
-               
-                if ($scope.cid == $scope.customers[i].id)
-                {
+                if ($scope.cid == $scope.customers[i].id) {
                     $scope.customerId = $scope.customers[i];
                 }
             }
-    
         });
 
-        $scope.message = $http.post('/api/angularApi/'+0).then(function (response) {
+        $scope.message = $http.post('/api/angularApi/' + 0).then(function (response) {
             $scope.projects = response.data;
-
             for (var i = 0; i < $scope.projects.length; i++) {
-             
-                if ($scope.pid == $scope.projects[i].id)
-                {
+                if ($scope.pid == $scope.projects[i].id) {
                     $scope.projectId = $scope.projects[i];
                 }
             }
-
         });
         $scope.message = $http.post('/api/angularApi/').then(function (response) {
             $scope.optionsList = response.data;
         });
 
         $scope.Add = function () {
-            console.log($scope.projectId.id);
             $scope.new = {};
             $scope.new.task_name = $scope.task.task.task_name;
             $scope.new.id = $scope.task.task.id;
@@ -197,14 +186,12 @@
             $scope.new.description = $scope.task.task.description;
             $scope.new.email = $scope.task.task.email;
             $scope.new.sms = $scope.task.task.sms;
-            $scope.new.start_date = $scope.task.task.end_date;
+            $scope.new.start_date = $scope.task.task.start_date;
             $scope.new.end_date = $scope.task.task.end_date;
             $scope.new.tempUsers = $scope.selectedList;
-          
-          
 
             $scope.message = $http.post('/api/TaskApi/', $scope.new).then(function (response) {
-             
+
                 alert("Task Added Sucessfully");
                 document.getElementById("taskForm").reset();
                 $scope.selectedList = [];
@@ -213,9 +200,7 @@
                 $scope.customerId = {};
                 $scope.projectId = {};
             });
-
         }
-
         $scope.getval = function (val) {
 
             $scope.projecttemp = [];
@@ -224,10 +209,10 @@
                     $scope.pojecttemp.push($scope.projects[i]);
                 }
             }
-         
+
         }
     });
 
-   
-   
+
+
 </script>
