--- a/Task Manager/Views/Ticket/CreateTicket.cshtml
+++ b/Task Manager/Views/Ticket/CreateTicket.cshtml
@@ -42,12 +42,12 @@
                                 <div class=" col-lg-offset-3 col-lg-6">
                                     <div class="col-lg-12 spacing">
                                         <div class="col-lg-6 ">
-                                            <label>Ticket +Name</label>
+                                            <label>Ticket Name</label>
                                             <input type="hidden" ng-model="task.task.id" />
                                         </div>
                                         <div class="col-lg-6 ">
                                             <input type="hidden" id="cust_id" value="0" />
-                                            <input class="form-control" type="text" ng-model="task.task.task_name">
+                                            <input class="form-control" type="text" ng-model="task.task.task_name" required="required">
                                         </div>
                                     </div>
 
@@ -56,7 +56,7 @@
                                             <label>Customer Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl"></select>
+                                            <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl" ></select>
 
                                         </div>
                                     </div>
@@ -73,7 +73,7 @@
                                             <label>Issue</label>
                                         </div>
                                         <div class="col-lg-6">
-                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description"> </textarea>
+                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description" required="required"> </textarea>
                                         </div>
                                     </div>
 
@@ -135,7 +135,7 @@
     app.controller("tickctrl", function ($scope, $http) {
 
 
-        $scope.message = $http.get('/api/angularApi/').then(function (response) {
+        $scope.message = $http.get('/api/TicketApi/' + 0).then(function (response) {
             $scope.task = response.data;
             $scope.selectedList = $scope.task.tags;
             $scope.pid = $scope.task.projectId;
@@ -172,7 +172,6 @@
 
        
         $scope.Add = function () {
-
             $scope.new = {};
             $scope.new.uname = $scope.task.task.task_name;
             $scope.new.id = $scope.task.task.id;
@@ -187,7 +186,6 @@
                 alert("Task Added Sucessfully");
                 document.getElementById("tickForm").reset();
                 $scope.selectedList = [];
-
                 $scope.customerId = {};
                 $scope.projectId = {};
             });
