--- a/Task Manager/Views/Ticket/CreateTicket.cshtml
+++ b/Task Manager/Views/Ticket/CreateTicket.cshtml
@@ -25,7 +25,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header" style="text-align:center">Create Tickets</h1>
+                <h1 class="page-header" style="text-align:center">Create Ticket</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -34,7 +34,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Create Tickets
+                        Create Ticket
                     </div>
                     <div class="panel-body" ng-controller="tickctrl">
                         <form ng-submit="Add()" id="tickForm">
@@ -43,11 +43,11 @@
                                     <div class="col-lg-12 spacing">
                                         <div class="col-lg-6 ">
                                             <label>Ticket Name</label>
-                                            <input type="hidden" ng-model="task.task.id" />
+                                            <input type="hidden" ng-model="task.id" />
                                         </div>
                                         <div class="col-lg-6 ">
                                             <input type="hidden" id="cust_id" value="0" />
-                                            <input class="form-control" type="text" ng-model="task.task.task_name" required="required">
+                                            <input class="form-control" type="text" ng-model="task.taskname" required="required">
                                         </div>
                                     </div>
 
@@ -56,7 +56,7 @@
                                             <label>Customer Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl" ></select>
+                                            <select ng-options="customer.name for customer in task.dropcustomer" ng-model="customerId" class="ddl" ng-change="selectionChange(this.id)"></select>
 
                                         </div>
                                     </div>
@@ -65,7 +65,7 @@
                                             <label>Project Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="project.name for project in projects" ng-model="projectId" class="ddl"></select>
+                                            <select ng-options="project.name for project in task.dropproject" ng-model="projectId" class="ddl"></select>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 spacing">
@@ -73,7 +73,16 @@
                                             <label>Issue</label>
                                         </div>
                                         <div class="col-lg-6">
-                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description" required="required"> </textarea>
+                                            <textarea class="form-control" type="text" cols="22" rows="2" ng-model="task.issue" required="required"> </textarea>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6 ">
+                                            <label>Branch Code</label>
+                                        </div>
+                                        <div class="col-lg-6 ">
+                                            <input class="form-control" type="text" ng-model="task.bCode" required="required">
                                         </div>
                                     </div>
 
@@ -92,14 +101,14 @@
                                     </div>
                                     <div class="col-lg-12 spacing">
                                         <div class="col-lg-6">
-                                            <label>Remind By</label>
+                                            <label>Reminder</label>
                                         </div>
                                         <div class="col-lg-6">
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" ng-model="task.task.sms" ng-checked="task.task.sms"> SMS
+                                                <input type="checkbox" ng-model="task.sms" ng-checked="task.sms"> SMS
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" ng-model="task.task.email" ng-checked="task.task.email">  Email
+                                                <input type="checkbox" ng-model="task.email" ng-checked="task.email">  Email
                                             </label>
                                         </div>
                                     </div>
@@ -138,60 +147,46 @@
         $scope.message = $http.get('/api/TicketApi/' + 0).then(function (response) {
             $scope.task = response.data;
             $scope.selectedList = $scope.task.tags;
-            $scope.pid = $scope.task.projectId;
-            $scope.cid = $scope.task.customerId;
-            console.log($scope.pid + "," + $scope.cid);
-        });
-
-        $scope.message = $http.get('/api/angularApi/'+0).then(function (response) {
-            $scope.customers = response.data;
-            console.log($scope.customers);
-            for (var i = 0; i < $scope.customers.length; i++) {
-
-                if ($scope.cid == $scope.customers[i].id) {
-                    $scope.customerId = $scope.customers[i];
+            $scope.optionsList = $scope.task.list;
+            $scope.originalProjects = $scope.task.dropproject;
+            for (var i = 0; i < $scope.task.dropcustomer.length; i++) {
+                if ($scope.task.cid == $scope.task.dropcustomer[i].id) {
+                    $scope.customerId = $scope.task.dropcustomer[i];
                 }
             }
 
-        });
-
-        $scope.message = $http.post('/api/angularApi/' + 0).then(function (response) {
-            $scope.projects = response.data;
-            
-            for (var i = 0; i < $scope.projects.length; i++) {
-
-                if ($scope.pid == $scope.projects[i].id) {
-                    $scope.projectId = $scope.projects[i];
+            for (var i = 0; i < $scope.task.dropproject.length; i++) {
+                if ($scope.task.pid == $scope.task.dropproject[i].id) {
+                    $scope.projectId = $scope.task.dropproject[i];
                 }
             }
-
-        });
-        $scope.message = $http.post('/api/angularApi/').then(function (response) {
-            $scope.optionsList = response.data;
         });
 
-       
-        $scope.Add = function () {
-            $scope.new = {};
-            $scope.new.uname = $scope.task.task.task_name;
-            $scope.new.id = $scope.task.task.id;
-            $scope.new.issue = $scope.task.task.description;
-            $scope.new.email = $scope.task.task.email;
-            $scope.new.sms = $scope.task.task.sms;
-            $scope.new.projectId = $scope.projectId.id;
-            $scope.new.assignedTo = $scope.selectedList;
-            console.log($scope.new);
-            $scope.message = $http.post('/api/ticketApi/', $scope.new).then(function (response) {
-                console.log(response.data);
-                alert("Task Added Sucessfully");
-                document.getElementById("tickForm").reset();
-                $scope.selectedList = [];
-                $scope.customerId = {};
-                $scope.projectId = {};
+        $scope.selectionChange = function (id) {
+            $scope.task.dropproject = [];
+            angular.forEach($scope.originalProjects, function (item) {
+                if (item.custId == $scope.customerId.id) {
+                    console.log("inside");
+                    $scope.task.dropproject.push(item);
+                }
             });
-
         }
 
+        $scope.Add = function () {
+ 
+                $scope.task.pid = $scope.projectId.id;
+                $scope.message = $http.post('/api/TicketApi/', $scope.task).then(function (response) {
+
+                    alert("Task Added Sucessfully");
+                    document.getElementById("taskForm").reset();
+                    $scope.selectedList = [];
+
+
+                    $scope.customerId = {};
+                    $scope.projectId = {};
+                });
+            }
+        
         $scope.getval = function (val) {
 
             $scope.projecttemp = [];
