--- a/Task Manager/Views/Ticket/ViewTicket.cshtml
+++ b/Task Manager/Views/Ticket/ViewTicket.cshtml
@@ -20,7 +20,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Ticket Assigned</h1>
+            <h1 class="page-header">Ticket Detail</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -29,7 +29,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Ticket Assigned
+                    Ticket Detail
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -37,8 +37,11 @@
                         <thead>
                             <tr>
                                 <th>Ticket Number</th>
+                                <th>Customer Code</th>
+                                <th>Customer Name</th>
                                 <th>Task Name</th>
                                 <th>Description</th>
+                                <th>Branch Code</th>
                                 <th>Assigned To</th>
                                 <th>Created By</th>
                                 <th>Start Date</th>
@@ -156,8 +159,11 @@
             "sPaginationType": "full_numbers",
             "aoColumns": [
                 { "mDataProp": "ticket_name" },
+                 { "mDataProp": "cCode" },
+                  { "mDataProp": "cName" },
                 { "mDataProp": "task_name" },
                 { "mDataProp": "description" },
+                { "mDataProp": "bran_Code" },
                 { "mDataProp": "users" },
                 { "mDataProp": "createdBy" },
                 { "mDataProp": ".startDate" },
